# ruex

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  TODO.md  book.toml  build.rs  chapter_1.html  index.html  print.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml
macro/: Cargo.toml
macro/examples/: aop.rs
macro/src/: lib.rs
macro/src/impls/: compose.rs  contract_aspect.rs  decorate.rs  delegate.rs  enums.rs  mock.rs  mod.rs  register.rs  utils.rs
src/: event_bus.rs  lib.rs  producer.rs  subscriber.rs
src/core/: controller.rs  mod.rs  model.rs  view.rs
src/foundation/: mod.rs
src/foundation/patterns/: builder.rs  mod.rs
src/foundation/patterns/command/: macro_command.rs  mod.rs  simple_command.rs
src/foundation/patterns/default/: controller.rs  mod.rs  model.rs  view.rs
src/foundation/patterns/facade/: facade.rs  mod.rs
src/foundation/patterns/fsm/: fsm.rs  fsm_controller.rs  integrations.rs  mod.rs  state_def.rs
src/foundation/patterns/mediator/: mediator.rs  mod.rs
src/foundation/patterns/observer/: mod.rs  notification.rs  notifier.rs  observer.rs
src/foundation/patterns/proxy/: mod.rs  proxy.rs
src/interfaces/: command.rs  controller.rs  facade.rs  mediator.rs  mod.rs  model.rs  notification.rs  notifier.rs  observer.rs  proxy.rs  view.rs
src/patterns/: builder.rs  mod.rs
src/patterns/command/: macro_command.rs  mod.rs  simple_command.rs
src/patterns/facade/: facade.rs  mod.rs
src/patterns/mediator/: mediator.rs  mod.rs
src/patterns/observer/: mod.rs  notification.rs  notifier.rs  observer.rs
src/patterns/proxy/: mod.rs  proxy.rs
src/prelude/: builder.rs  command.rs  compose.rs  controller.rs  currying.rs  facade.rs  mediator.rs  mod.rs  model.rs  notification.rs  notifier.rs  observer.rs  pipe.rs  proxy.rs  singleton.rs  view.rs
src/utils/: mod.rs
src/utils/panic/: handler.rs  mod.rs  provider.rs  validate.rs
src/utils/terminal/: mod.rs
tests/: add_getters_setters.rs
