[package]
name = "ruex"
version = "0.1.2"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ruex"
repository = "https://github.com/angular-rust/ruex"
documentation = "https://docs.rs/ruex"
description = "Generic State Management framework"
keywords = ["mvc", "redux", "state-management", "time-travel", "event-bus"]

edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.7.2"
# yew = "0.17"
# wasm-logger = "0.2"
