[package]
name = "ruex"
version = "0.1.4"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ruex"
repository = "https://github.com/angular-rust/ruex"
documentation = "https://docs.rs/ruex"
description = "Generic State Management framework"
keywords = ["mvc", "redux", "state-management", "time-travel", "event-bus"]

edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.7"
futures = "0.3"
ruex-macro = { version="0", path = "macro" }
colored = "2.0"
atty = "0.2"
url = "2.2"
urlencoding = "2.1"
color-backtrace = "0.5"
fern = { version = "0.6", features = ["colored", "syslog-6", "meta-logging-in-format", "chrono"] }
humantime = "2.1"
syslog = "6"
# contracts = "0.6"
# systemd-journal-logger = "0.7"
rust-companion = "0"

[build-dependencies]
rust-companion = "0"