[package]
name = "ruex-macro"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "fold", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro-error = "1.0"
serde_tokenstream = "0.1"
syn-serde = { version = "0.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
rust-companion = "0"